--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,3 +237,46 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen and (max-width: 980px) {
+  
+  #main-container {
+    width: 75%;
+    margin: 0 auto;
+  }
+
+  .main-section {
+    width: 57.8%;
+  }
+
+  #masthead {
+    width: 960px;
+  }
+
+  #masthead div {
+    padding-left: 13.2%;
+  }
+
+  #masthead nav {
+    padding-right: 13.2%;
+  }
+
+  .auth-image {
+    width: 95%;
+    float: none;
+  }
+
+  .sidebar {
+    width: 38%;
+  }
+
+  #logo {
+    width: 25.2%;
+  }
+
+  .work {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+}
