--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ h3 {
 
 #logo {
   float: left;
-  width: 250px;
+  width: 290px;
   height: 90px;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
@@ -271,12 +271,149 @@ input[type=submit] {
   }
 
   #logo {
-    width: 25.2%;
+    width: 35%;
   }
 
   .work {
     width: 100%;
     margin: 0 auto;
   }
+
+}
+
+@media screen and (max-width: 768px) {
+
+  #main-container {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  .main-section {
+    width: 100%;
+    float: none;
+    margin: 0 auto 30px auto;
+    overflow: auto;
+  }
+
+  #masthead {
+    width: 768px;
+  }
+
+  #masthead div {
+    padding-left: 8%;
+  }
+
+  #masthead nav {
+    padding-right: 10%;
+  }
+
+
+  .sidebar {
+    width: 96%;
+    max-width: 650px;
+    float: none;
+    margin: 0 auto 50px auto;
+  }
+
+  #logo {
+    width: 39%;
+  }
+
+  .work {
+    width: 45%;
+    margin: 0 auto;
+  }
+
+  .auth-image {
+    float: left;
+    width: 48%;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 30px;
+    margin-bottom: 18px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+
+
+body {
+  width: 620px;
+}
+
+  #main-container {
+    margin: 0 auto;
+    width:  580px;
+  }
+
+  #masthead {
+    width: 620px;
+    height: 155px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    padding-left: 0;
+    float: none;
+  }
+
+  #masthead div {
+    padding: 0px;
+    overflow:   hidden;
+  }
+
+  #logo {
+    outline: 2px solid green;
+    width: 620px;
+    height: 91px;
+    margin-left: 0;
+    padding-left: 0px;
+  }
+
+  nav {
+    width: 620px;
+    height: 64px;
+    margin: 0;
+    display:  flex; 
+    flex-flow:  row;  
+    min-width:  100vw;
+    align-content:  center; 
+  }
+
+.main-section {
+  margin: 40px auto;
+  width:  580px;
+  padding-right:  0;
+}
+
+.sidebar {
+  margin: 20px auto;
+  width:  580px;
+  padding-right:  0;
+  margin-bottom:  40px;
+}
+
+.main-section img {
+  width:  95%;
+}
+
+.work {
+  width:  95%;
+  margin-bottom:  20px;
+}
+
+.work h3 {
+  width:  95%;
+}
+
+nav a {
+  flex: 1;
+  margin-top:   20px;
+  margin-left:  20px;
+  padding-left:  50px;
+  text-align: center;
+}
+
 
 }
